# esp-pwsh-check

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pwsh_checker.ps1  pyproject.toml
esp_pwsh_check/: __main__.py  pwsh_checker.py
